--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   <h1>Información sobre Países</h1>
   <div id="countries-list"></div>
-
+  <div id="country-details" class="hidden">
+    <button id="close-button">Cerrar</button>
+    <div id="details-content"></div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
